nasa-query-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nasa-query-ns
  labels:
    app: nasa-query
