debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod-with-pv
  namespace: nasa-query-ns
  labels:
    app: nasa-query
spec:
  containers:
    - name: debug-container
      image: busybox
      command: [ "sleep", "3600" ]
      volumeMounts:
        - mountPath: /mnt/data
          name: pv-volume
  volumes:
    - name: pv-volume
      persistentVolumeClaim:
        claimName: nasa-data-pvc
