allow-dns-and-external-egress-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-and-external-egress
  namespace: nasa-query-ns
  labels:
    app: nasa-query
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # Allow egress traffic to DNS servers
    - to:
        - ipBlock:
            cidr: 10.96.0.0/12  # Kubernetes default DNS range
    # Allow egress traffic to all external IPs
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0  # Allow all external egress traffic
